"""This is the Model for the UserRole class"""
__author__ = "7157747, Gellien, 8425470, Heidusch"

class UserRole():
    """UserRole class."""
    admin = "admin"
    treasurer = "treasurer"
    referee = "referee"
