@startuml Vereinskassen-System

' Enums
enum UserRole {
    admin
    treasurer
    referee
}

' Models
class User {
    - username: str
    - password: str
    - role: str
    - department: str
    + authenticate(password: str): bool
}

class Account {
    - account_id: str
    - department: str
    - balance: float
    - treasurer: User
    + get_balance(): float
    + add(amount: float)
    + remove(amount: float)
    + add_transaction(transaction: Transaction)
}

class Transaction {
    - transaction_id: str
    - time_stamp: datetime
    - amount: float
    - transaction_type: str
    - source_account: Account
    - target_account: Account
    - description: str
}

' Controllers
class AuthController {
    - data_handler: DataHandler
    + check_password(username: str, password: str): bool
    + login(username: str, password: str): str
}

class TransactionController {
    - data_handler: DataHandler
    + get_balance(account: Account): float
    + transaction(account: Account, target_account: str, amount: float, description: str)
    + get_accounts(): List[Account]
}

' Data Handler
class DataHandler {
    - users_file: str
    - accounts_file: str
    - transactions_file: str
    - users: List[User]
    - accounts: List[Account]
    - transactions: List[Transaction]
    + get_account_by_user(username: str): Account
    + get_transaction_by_account(account: Account): Set[Transaction]
    + save_data(data: Union[User, Account, Transaction])
    + load_data(data_type: str, key: str): Union[User, Account, Transaction]
    + import_from_csv()
    + export_to_csv()
}

' Views
abstract class BaseView {
    + setup_ui()
}

class MainView {
    - current_view: BaseView
    - role: str
    + show_login()
    + on_login_success(user_role: str, username: str)
}

class LoginView {
    - username_entry: Entry
    - password_entry: Entry
    + login()
    + login_valid(): bool
}

class AdminView {
    + create_user()
    + create_account()
    + save_state()
    + log_out()
}

class TreasurerView {
    + transfer()
    + deposit()
    + withdraw()
    + log_out()
}

class FinanceView {
    + sel_account()
}

' Relationships
User "1" -- "1" UserRole
Account "1" -- "1" User
Transaction "0..*" -- "2" Account
BaseView <|-- LoginView
BaseView <|-- AdminView
BaseView <|-- TreasurerView
BaseView <|-- FinanceView
MainView -- BaseView
AuthController -- DataHandler
TransactionController -- DataHandler
DataHandler -- User
DataHandler -- Account
DataHandler -- Transaction

@enduml



